Added footer, style for it

--- a/index.html
+++ b/index.html
@@ -794,5 +794,212 @@
       <!-- /.container -->
     </section>
     <!-- /.activities -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-top">
+          <div class="footer-top__logo-wrapper">
+            <img
+              src="img/7.footer/vertical-logo.svg"
+              alt="Logo: Best Tour Plan"
+              class="footer-top__logo"
+            />
+          </div>
+          <!-- /.footer-top_logo-wrapper -->
+          <div class="footer-top__categories">
+            <h3 class="footer-top__title">All categories</h3>
+            <ul class="list footer-top__list">
+              <li class="item list__item">
+                <a href="#" class="item__link">All Deals</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Hotels</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Activities</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Spa Packages</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Hotel Day Packages</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Restaurants</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Fitness</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Rodrigues</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer-top__categories -->
+          <div class="footer-top__wrapper">
+            <div class="footer-top__additional-info">
+              <h3 class="footer-top__title">Additional information</h3>
+              <ul class="list footer-top__list">
+                <li class="item list__item">
+                  <a href="#" class="item__link">About Us</a>
+                </li>
+                <li class="item list__item">
+                  <a href="#" class="item__link">Contact Us</a>
+                </li>
+                <li class="item list__item">
+                  <a href="#" class="item__link">How does it work?</a>
+                </li>
+                <li class="item list__item">
+                  <a href="#" class="item__link">Frequently Asked Questions</a>
+                </li>
+                <li class="item list__item">
+                  <a href="#" class="item__link">Deals.mu loyalty program</a>
+                </li>
+                <li class="item list__item">
+                  <a href="#" class="item__link"
+                    >Promote your Business on BTP</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <!-- /.footer-top__additional-info -->
+            <div class="footer-top__social">
+              <h3 class="footer-top__title footer-top__title_nm">
+                Social network
+              </h3>
+              <div class="footer-top__links">
+                <a href="#" class="footer-top__link">
+                  <svg class="icon footer-top__icon">
+                    <use xlink:href="img/sprite.svg#fb"></use>
+                  </svg>
+                </a>
+                <a href="#" class="footer-top__link">
+                  <svg class="icon footer-top__icon">
+                    <use xlink:href="img/sprite.svg#yt"></use>
+                  </svg>
+                </a>
+                <a href="#" class="footer-top__link">
+                  <svg class="icon footer-top__icon">
+                    <use xlink:href="img/sprite.svg#inst"></use>
+                  </svg>
+                </a>
+              </div>
+              <!-- /.footer-top__links -->
+            </div>
+            <!-- /.footer-top__social -->
+          </div>
+          <!-- /.footer-top__wrapper -->
+          <div class="footer-top__legal-info">
+            <h3 class="footer-top__title">Legal information</h3>
+            <ul class="list footer-top__list">
+              <li class="item list__item">
+                <a href="#" class="item__link">Terms & Conditions </a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Disclaimer</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Cancellation policy Privacy</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer-top__legal-info -->
+        </div>
+        <!-- /.footer-top -->
+        <div class="footer-contact">
+          <div class="details footer-contact__details-wrapper">
+            <h3 class="footer-contact__title details__title">
+              Contact details
+            </h3>
+            <span class="footer-contact__subtitle footer-contact__txt"
+              >Feel free to contact us by phone, email or by our contact
+              form</span
+            >
+            <ul class="list footer-contact__list">
+              <li class="item list__item footer-contact__item">
+                <svg class="icon item__icon footer-contact__icon">
+                  <use xlink:href="img/sprite.svg#location"></use>
+                </svg>
+                <span class="item__txt footer-contact__txt"
+                  >9748 Blossom Hill Rd undefined Lansing, Idaho 68545 United
+                  States</span
+                >
+              </li>
+              <li class="item list__item footer-contact__item">
+                <svg class="icon item__icon footer-contact__icon">
+                  <use xlink:href="img/sprite.svg#phone"></use>
+                </svg>
+                <div class="footer-contact__txt-wrapper">
+                  <span class="item__txt footer-contact__txt"
+                    >Tel (business hours) : 269 1500</span
+                  ><br />
+                  <span class="footer-contact__txt"
+                    >Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am –
+                    20:00 pm)</span
+                  ><br />
+                  <span class="footer-contact__txt"
+                    >Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00
+                    pm)</span
+                  >
+                </div>
+              </li>
+              <li class="item list__item footer-contact__item">
+                <svg class="icon item__icon footer-contact__icon">
+                  <use xlink:href="img/sprite.svg#mail"></use>
+                </svg>
+                <span class="item__txt footer-contact__txt"
+                  >cherly.lawson@example.com</span
+                >
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer-contact__wrapper -->
+          <div class="footer-contact__form-wrapper">
+            <h3 class="footer-contact__title">Send us a message</h3>
+            <form action="#" class="form footer-contact__form">
+              <input
+                type="text"
+                class="form__input"
+                placeholder="Your Full Name*"
+              />
+              <input
+                type="text"
+                class="form__input"
+                placeholder="Phone Number*"
+              />
+              <textarea
+                class="form__textarea"
+                cols="30"
+                rows="10"
+                placeholder="Message"
+              ></textarea>
+              <div class="form__button-wrapper">
+                <button class="button form__button">Send</button>
+                <span class="form-info">* Required Fields</span>
+              </div>
+            </form>
+          </div>
+          <!-- /.footer-contact__form-wrapper -->
+        </div>
+        <!-- /.footer-contact -->
+        <div class="footer-bottom">
+          <div class="footer-bottom__link-wrapper">
+            <a href="#" class="footer-bottom__link">Disclaimer</a>
+            <a href="#" class="footer-bottom__link">Conditions of use</a>
+            <a href="#" class="footer-bottom__link">Cancellation policy</a>
+          </div>
+          <!-- /.footer-bottom__link-wrapper -->
+          <div class="footer-bottom__logo-wrapper">
+            <img
+              src="img/7.footer/companies-logo.png"
+              alt="Logo: companies"
+              class="footer-bottom__companies-logo"
+            />
+          </div>
+          <!-- /.footer-bottom__logo-wrapper -->
+        </div>
+        <!-- /.footer-bottom -->
+      </div>
+      <!-- /.container -->
+    </footer>
   </body>
 </html>
