--- a/index.html
+++ b/index.html
@@ -835,59 +835,54 @@
             </ul>
           </div>
           <!-- /.footer-top__categories -->
-          <div class="footer-top__wrapper">
-            <div class="footer-top__additional-info">
-              <h3 class="footer-top__title">Additional information</h3>
-              <ul class="list footer-top__list">
-                <li class="item list__item">
-                  <a href="#" class="item__link">About Us</a>
-                </li>
-                <li class="item list__item">
-                  <a href="#" class="item__link">Contact Us</a>
-                </li>
-                <li class="item list__item">
-                  <a href="#" class="item__link">How does it work?</a>
-                </li>
-                <li class="item list__item">
-                  <a href="#" class="item__link">Frequently Asked Questions</a>
-                </li>
-                <li class="item list__item">
-                  <a href="#" class="item__link">Deals.mu loyalty program</a>
-                </li>
-                <li class="item list__item">
-                  <a href="#" class="item__link"
-                    >Promote your Business on BTP</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <!-- /.footer-top__additional-info -->
-            <div class="footer-top__social">
-              <h3 class="footer-top__title footer-top__title_nm">
-                Social network
-              </h3>
-              <div class="footer-top__links">
-                <a href="#" class="footer-top__link">
-                  <svg class="icon footer-top__icon">
-                    <use xlink:href="img/sprite.svg#fb"></use>
-                  </svg>
-                </a>
-                <a href="#" class="footer-top__link">
-                  <svg class="icon footer-top__icon">
-                    <use xlink:href="img/sprite.svg#yt"></use>
-                  </svg>
-                </a>
-                <a href="#" class="footer-top__link">
-                  <svg class="icon footer-top__icon">
-                    <use xlink:href="img/sprite.svg#inst"></use>
-                  </svg>
-                </a>
-              </div>
-              <!-- /.footer-top__links -->
-            </div>
-            <!-- /.footer-top__social -->
+          <div class="footer-top__additional-info">
+            <h3 class="footer-top__title">Additional information</h3>
+            <ul class="list footer-top__list">
+              <li class="item list__item">
+                <a href="#" class="item__link">About Us</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Contact Us</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">How does it work?</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Frequently Asked Questions</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Deals.mu loyalty program</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Promote your Business on BTP</a>
+              </li>
+            </ul>
           </div>
-          <!-- /.footer-top__wrapper -->
+          <!-- /.footer-top__additional-info -->
+          <div class="footer-top__social">
+            <h3 class="footer-top__title footer-top__title_nm">
+              Social network
+            </h3>
+            <div class="footer-top__links">
+              <a href="#" class="footer-top__link">
+                <svg class="icon footer-top__icon">
+                  <use xlink:href="img/sprite.svg#fb"></use>
+                </svg>
+              </a>
+              <a href="#" class="footer-top__link">
+                <svg class="icon footer-top__icon">
+                  <use xlink:href="img/sprite.svg#yt"></use>
+                </svg>
+              </a>
+              <a href="#" class="footer-top__link">
+                <svg class="icon footer-top__icon">
+                  <use xlink:href="img/sprite.svg#inst"></use>
+                </svg>
+              </a>
+            </div>
+            <!-- /.footer-top__links -->
+          </div>
+          <!-- /.footer-top__social -->
           <div class="footer-top__legal-info">
             <h3 class="footer-top__title">Legal information</h3>
             <ul class="list footer-top__list">
@@ -898,7 +893,10 @@
                 <a href="#" class="item__link">Disclaimer</a>
               </li>
               <li class="item list__item">
-                <a href="#" class="item__link">Cancellation policy Privacy</a>
+                <a href="#" class="item__link">Cancellation policy</a>
+              </li>
+              <li class="item list__item">
+                <a href="#" class="item__link">Privacy</a>
               </li>
             </ul>
           </div>
@@ -954,16 +952,16 @@
           </div>
           <!-- /.footer-contact__wrapper -->
           <div class="footer-contact__form-wrapper">
-            <h3 class="footer-contact__title">Send us a message</h3>
+            <h3 class="footer-contact__title form-title">Send us a message</h3>
             <form action="#" class="form footer-contact__form">
               <input
                 type="text"
-                class="form__input"
+                class="form__input form__input_name"
                 placeholder="Your Full Name*"
               />
               <input
                 type="text"
-                class="form__input"
+                class="form__input form__input_number"
                 placeholder="Phone Number*"
               />
               <textarea
