--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <header class="navbar">
+    <header class="navbar navbar__mobile_fixed">
       <div class="container">
         <div class="navbar-top">
           <a href="#" class="logo">
@@ -30,7 +30,7 @@
               class="logo__image"
             />
           </a>
-          <form action="#" class="search">
+          <form action="#" class="search search__mobile_hidden">
             <input
               type="text"
               class="search__input"
@@ -42,7 +42,7 @@
               </svg>
             </button>
           </form>
-          <a href="#" class="user">
+          <a href="#" class="user user__mobile_hidden">
             <img
               src="img/1.header/avatar.jpg"
               alt="Avatar: Natan"
@@ -64,6 +64,31 @@
         <div class="container">
           <nav class="navbar-menu">
             <ul class="navbar-menu__list">
+              <li class="navbar-menu__item navbar-menu__user_mobile_hidden">
+                <a href="#" class="user">
+                  <img
+                    src="img/1.header/avatar.jpg"
+                    alt="Avatar: Natan"
+                    class="user__avatar"
+                  />
+                  <span class="user__name">Natan</span>
+                </a>
+                <!-- /.user -->
+              </li>
+              <li class="navbar-menu__item navbar-menu__search_mobile_hidden">
+                <form action="#" class="search">
+                  <input
+                    type="text"
+                    class="search__input"
+                    placeholder="Search Location"
+                  />
+                  <button class="search__button">
+                    <svg class="icon search__icon">
+                      <use xlink:href="img/sprite.svg#search"></use>
+                    </svg>
+                  </button>
+                </form>
+              </li>
               <li class="navbar-menu__item">
                 <a href="#" class="navbar-menu__link">All Deals</a>
               </li>
@@ -90,7 +115,7 @@
         </div>
         <!-- /.container -->
       </div>
-      <!-- /.navbar-menu -->
+      <!-- /.navbar-bottom -->
     </header>
     <!-- /.header -->
     <nav class="breadcrump">
