--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <script src="js/jquery-3.5.1.min.js" defer></script>
     <script src="js/swiper-bundle.min.js" defer></script>
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
@@ -259,7 +260,11 @@
                   <span>12100</span>
                 </a>
               </div>
-              <a href="#" class="button booking-card__button">
+              <a
+                href="#"
+                data-toggle="modal"
+                class="button booking-card__button"
+              >
                 View Other Options
               </a>
             </div>
@@ -1024,5 +1029,39 @@
       </div>
       <!-- /.container -->
     </footer>
+
+    <div class="modal">
+      <div class="modal__overlay"></div>
+      <!-- /.modal__overlay -->
+      <div class="modal__dialog">
+        <a href="#" class="modal__close">
+          <svg class="icon modal__icon">
+            <use xlink:href="img/sprite.svg#close"></use>
+          </svg>
+        </a>
+        <form action="#" class="form modal__form">
+          <h3 class="modal__title">Booking</h3>
+          <input
+            type="text"
+            class="modal__input"
+            placeholder="Your Full Name*"
+          />
+          <input type="text" class="modal__input" placeholder="Phone Number*" />
+          <input type="text" class="modal__input" placeholder="Email*" />
+          <textarea
+            cols="30"
+            rows="10"
+            class="modal__textarea"
+            placeholder="Message"
+          ></textarea>
+          <div class="modal__button-wrapper">
+            <button class="modal__button">Send</button>
+            <span class="modal__txt">* Required Fields</span>
+          </div>
+        </form>
+      </div>
+      <!-- /.modal__dialog -->
+    </div>
+    <!-- /.modal -->
   </body>
 </html>
