Added modal for buttons

--- a/index.html
+++ b/index.html
@@ -359,7 +359,9 @@
               <span class="content__price_old">$ 10,500</span>
               <div class="content__price">
                 <span class="content__price_new">$ 8,500</span>
-                <a href="#" class="content__button">Book Now</a>
+                <a href="#" data-toggle="modal" class="content__button"
+                  >Book Now</a
+                >
               </div>
               <!-- /.content__price -->
             </div>
@@ -410,7 +412,9 @@
               <span class="content__price_old">$ 8,500</span>
               <div class="content__price">
                 <span class="content__price_new">$ 3,000</span>
-                <a href="#" class="content__button">Book Now</a>
+                <a href="#" data-toggle="modal" class="content__button"
+                  >Book Now</a
+                >
               </div>
               <!-- /.content__price -->
             </div>
@@ -461,7 +465,9 @@
               <span class="content__price_old">$ 10,500</span>
               <div class="content__price">
                 <span class="content__price_new">$ 9,500</span>
-                <a href="#" class="content__button">Book Now</a>
+                <a href="#" data-toggle="modal" class="content__button"
+                  >Book Now</a
+                >
               </div>
               <!-- /.content__price -->
             </div>
@@ -512,7 +518,9 @@
               <span class="content__price_old">$ 4,500</span>
               <div class="content__price">
                 <span class="content__price_new">$ 2,500</span>
-                <a href="#" class="content__button">Book Now</a>
+                <a href="#" data-toggle="modal" class="content__button"
+                  >Book Now</a
+                >
               </div>
               <!-- /.content__price -->
             </div>
@@ -563,7 +571,9 @@
               <span class="content__price_old">$ 6,500</span>
               <div class="content__price">
                 <span class="content__price_new">$ 3,500</span>
-                <a href="#" class="content__button">Book Now</a>
+                <a href="#" data-toggle="modal" class="content__button"
+                  >Book Now</a
+                >
               </div>
               <!-- /.content__price -->
             </div>
@@ -772,7 +782,9 @@
                 >The curious corner<br />
                 of chamarel</span
               >
-              <a href="#" class="activity__button">Book now</a>
+              <a href="#" data-toggle="modal" class="activity__button"
+                >Book now</a
+              >
             </div>
           </div>
           <!-- /.activities__item -->
@@ -787,7 +799,9 @@
                 >Gymkhana club golf<br />
                 course</span
               >
-              <a href="#" class="activity__button">Book now</a>
+              <a href="#" data-toggle="modal" class="activity__button"
+                >Book now</a
+              >
             </div>
           </div>
           <!-- /.activities__item -->
@@ -802,7 +816,9 @@
                 >Tamarind falls hiking<br />
                 trip - full day
               </span>
-              <a href="#" class="activity__button">Book now</a>
+              <a href="#" data-toggle="modal" class="activity__button"
+                >Book now</a
+              >
             </div>
           </div>
           <!-- /.activities__item -->
@@ -817,7 +833,9 @@
                 >The blue marine discovery<br />
                 quest</span
               >
-              <a href="#" class="activity__button">Book now</a>
+              <a href="#" data-toggle="modal" class="activity__button"
+                >Book now</a
+              >
             </div>
           </div>
           <!-- /.activities__item -->
