--- a/index.html
+++ b/index.html
@@ -981,15 +981,22 @@
                 </svg>
                 <div class="footer-contact__txt-wrapper">
                   <span class="item__txt footer-contact__txt"
-                    >Tel (business hours) : 269 1500</span
+                    >Tel (business hours) :
+                    <a href="#" class="footer-contact__link">269 1500</a></span
                   ><br />
                   <span class="footer-contact__txt"
-                    >Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am –
-                    20:00 pm)</span
+                    >Tel (hotline) Monday - Saturday:
+                    <a href="tel:52-56-61-38" class="footer-contact__link"
+                      >52-56-61-38</a
+                    >
+                    (08:00 am – 20:00 pm)</span
                   ><br />
                   <span class="footer-contact__txt"
-                    >Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00
-                    pm)</span
+                    >Tel (hotline) Sunday:
+                    <a href="tel:52-56-61-38" class="footer-contact__link"
+                      >52-56-61-38</a
+                    >
+                    (08:00 am – 14:00 pm)</span
                   >
                 </div>
               </li>
@@ -997,8 +1004,10 @@
                 <svg class="icon item__icon footer-contact__icon">
                   <use xlink:href="img/sprite.svg#mail"></use>
                 </svg>
-                <span class="item__txt footer-contact__txt"
-                  >cherly.lawson@example.com</span
+                <a
+                  href="mailto:cherly.lawson@example.com"
+                  class="item__txt footer-contact__link"
+                  >cherly.lawson@example.com</a
                 >
               </li>
             </ul>
