Fixed responsivity of modal

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <script src="js/main.js" defer></script>
   </head>
 
-  <body>
-    <a id="main"></a>
+  <body id="main">
     <header class="navbar navbar__mobile_fixed">
       <div class="container">
         <div class="navbar-top">
