--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/main.css" />
     <script src="js/jquery-3.5.1.min.js" defer></script>
+    <script src="js/jquery.validate.min.js" defer></script>
+    <script src="js/jquery.mask.min.js" defer></script>
     <script src="js/swiper-bundle.min.js" defer></script>
-    <script
-      src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-      defer
-    ></script>
     <script src="js/parallax.min.js" defer></script>
     <script src="js/main.js" defer></script>
   </head>
@@ -597,11 +595,12 @@
           <span class="newsletter__title__strong">newsletter</span>
         </h2>
         <!-- /.newsletter__text -->
-        <form action="#" class="subscribe">
+        <form action="send-1.php" method="POST" class="subscribe">
           <input
             type="text"
             class="subscribe__input"
             placeholder="Your email address"
+            name="email"
           />
           <button class="subscribe__button">Send</button>
         </form>
@@ -1014,22 +1013,35 @@
           <!-- /.footer-contact__wrapper -->
           <div class="footer-contact__form-wrapper">
             <h3 class="footer-contact__title form-title">Send us a message</h3>
-            <form action="#" class="form footer-contact__form">
-              <input
-                type="text"
-                class="form__input form__input_name"
-                placeholder="Your Full Name*"
-              />
-              <input
-                type="text"
-                class="form__input form__input_number"
-                placeholder="Phone Number*"
-              />
+            <form
+              action="send-2.php"
+              method="POST"
+              class="form footer-contact__form"
+            >
+              <div class="footer-contact__input-group">
+                <input
+                  type="text"
+                  class="form__input form__input_name"
+                  placeholder="Your Full Name*"
+                  name="name"
+                  required
+                  minlength="2"
+                />
+              </div>
+              <div class="footer-contact__input-group">
+                <input
+                  type="tel"
+                  class="form__input form__input_number"
+                  placeholder="Phone Number*"
+                  name="phone"
+                  required
+                  minlength="12"
+                />
+              </div>
               <textarea
                 class="form__textarea"
-                cols="30"
-                rows="10"
                 placeholder="Message"
+                name="message"
               ></textarea>
               <div class="form__button-wrapper">
                 <button class="button form__button">Send</button>
@@ -1070,20 +1082,41 @@
             <use xlink:href="img/sprite.svg#close"></use>
           </svg>
         </a>
-        <form action="#" class="form modal__form">
+        <form action="send-3.php" method="POST" class="form modal__form">
           <h3 class="modal__title">Booking</h3>
-          <input
-            type="text"
-            class="modal__input"
-            placeholder="Your Full Name*"
-          />
-          <input type="text" class="modal__input" placeholder="Phone Number*" />
-          <input type="text" class="modal__input" placeholder="Email*" />
+          <div class="modal__input-group">
+            <input
+              type="text"
+              class="modal__input"
+              placeholder="Your Full Name*"
+              name="name"
+              required
+              minlength="2"
+            />
+          </div>
+          <div class="modal__input-group">
+            <input
+              type="tel"
+              class="modal__input"
+              placeholder="Phone Number*"
+              name="phone"
+              required
+              minlength="12"
+            />
+          </div>
+          <div class="modal__input-group">
+            <input
+              type="email"
+              class="modal__input"
+              placeholder="Email*"
+              name="email"
+              required
+            />
+          </div>
           <textarea
-            cols="30"
-            rows="10"
             class="modal__textarea"
             placeholder="Message"
+            name="message"
           ></textarea>
           <div class="modal__button-wrapper">
             <button class="modal__button">Send</button>
