--- a/index.html
+++ b/index.html
@@ -595,12 +595,13 @@
           <span class="newsletter__title__strong">newsletter</span>
         </h2>
         <!-- /.newsletter__text -->
-        <form action="send-1.php" method="POST" class="subscribe">
+        <form action="send-1.php" method="POST" class="form subscribe">
           <input
-            type="text"
+            type="email"
             class="subscribe__input"
             placeholder="Your email address"
             name="email"
+            required
           />
           <button class="subscribe__button">Send</button>
         </form>
@@ -1035,7 +1036,7 @@
                   placeholder="Phone Number*"
                   name="phone"
                   required
-                  minlength="12"
+                  minlength="17"
                 />
               </div>
               <textarea
@@ -1101,7 +1102,7 @@
               placeholder="Phone Number*"
               name="phone"
               required
-              minlength="12"
+              minlength="17"
             />
           </div>
           <div class="modal__input-group">
