--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/main.css" />
     <script src="js/jquery-3.5.1.min.js" defer></script>
     <script src="js/jquery.validate.min.js" defer></script>
     <script src="js/jquery.mask.min.js" defer></script>
     <script src="js/swiper-bundle.min.js" defer></script>
     <script src="js/parallax.min.js" defer></script>
+    <script src="js/aos.js" defer></script>
     <script src="js/main.js" defer></script>
   </head>
 
@@ -24,14 +26,18 @@
     <header class="navbar navbar__mobile_fixed">
       <div class="container">
         <div class="navbar-top">
-          <a href="#main" class="logo">
+          <a href="#main" class="logo" data-aos="fade-right">
             <img
               src="img/1.header/horizontal-logo.svg"
               alt="Logo: Best Tour Plan"
               class="logo__image"
             />
           </a>
-          <form action="#" class="search search__mobile_hidden">
+          <form
+            action="#"
+            class="search search__mobile_hidden"
+            data-aos="fade-right"
+          >
             <input
               type="text"
               class="search__input"
@@ -43,7 +49,7 @@
               </svg>
             </button>
           </form>
-          <a href="#" class="user user__mobile_hidden">
+          <a href="#" class="user user__mobile_hidden" data-aos="fade-right">
             <img
               src="img/1.header/avatar.jpg"
               alt="Avatar: Natan"
@@ -90,25 +96,60 @@
                   </button>
                 </form>
               </li>
-              <li class="navbar-menu__item">
+              <li
+                class="navbar-menu__item"
+                data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="0"
+              >
                 <a href="#" class="navbar-menu__link">All Deals</a>
               </li>
-              <li class="navbar-menu__item">
+              <li
+                class="navbar-menu__item"
+                data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="100"
+              >
                 <a href="#" class="navbar-menu__link">Hotels</a>
               </li>
-              <li class="navbar-menu__item">
+              <li
+                class="navbar-menu__item"
+                data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="200"
+              >
                 <a href="#" class="navbar-menu__link">Activities</a>
               </li>
-              <li class="navbar-menu__item">
+              <li
+                class="navbar-menu__item"
+                data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+              >
                 <a href="#" class="navbar-menu__link">Hotel Day Packages</a>
               </li>
-              <li class="navbar-menu__item">
+              <li
+                class="navbar-menu__item"
+                data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="400"
+              >
                 <a href="#" class="navbar-menu__link">Restaurants</a>
               </li>
-              <li class="navbar-menu__item">
+              <li
+                class="navbar-menu__item"
+                data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="500"
+              >
                 <a href="#" class="navbar-menu__link">Events</a>
               </li>
-              <li class="navbar-menu__item">
+              <li
+                class="navbar-menu__item"
+                data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="600"
+              >
                 <a href="#" class="navbar-menu__link">Rodrigues</a>
               </li>
             </ul>
@@ -770,7 +811,11 @@
       <div class="container">
         <h2 class="activities__title">Other activities</h2>
         <div class="activities__content">
-          <div class="activity activities__item">
+          <div
+            class="activity activities__item"
+            data-aos="fade-up-right"
+            data-aos-duration="300"
+          >
             <img
               src="img/5.activities/corner.jpg"
               alt="Activity photo"
@@ -787,7 +832,11 @@
             </div>
           </div>
           <!-- /.activities__item -->
-          <div class="activity activities__item">
+          <div
+            class="activity activities__item"
+            data-aos="fade-up-right"
+            data-aos-duration="500"
+          >
             <img
               src="img/5.activities/golf.jpg"
               alt="Activity photo"
@@ -804,7 +853,11 @@
             </div>
           </div>
           <!-- /.activities__item -->
-          <div class="activity activities__item">
+          <div
+            class="activity activities__item"
+            data-aos="fade-up-right"
+            data-aos-duration="700"
+          >
             <img
               src="img/5.activities/trip.jpg"
               alt="Activity photo"
@@ -821,7 +874,11 @@
             </div>
           </div>
           <!-- /.activities__item -->
-          <div class="activity activities__item">
+          <div
+            class="activity activities__item"
+            data-aos="fade-up-right"
+            data-aos-duration="900"
+          >
             <img
               src="img/5.activities/marine.jpg"
               alt="Activity photo"
